website/websites/u64q/code/fasta.1.python3.log

Tue, 30 Nov 2010 22:52:05 GMT

MAKE:
mv fasta.python3 fasta.py
/usr/local/src/Python-3.1.2/bin/python3.1 -OO -c "from py_compile import compile; compile('fasta.py')"
  File "fasta.py", line 54
    print s[i:i+width]
          ^
SyntaxError: invalid syntax

0.06s to complete and log all make actions

COMMAND LINE:
/usr/local/src/Python-3.1.2/bin/python3.1 fasta.pyo 250000

PROGRAM FAILED 


PROGRAM OUTPUT:

/usr/local/src/Python-3.1.2/bin/python3.1: can't open file 'fasta.pyo': [Errno 2] No such file or directory
